Spacing bug fixed

--- a/src/assets/theme.scss
+++ b/src/assets/theme.scss
@@ -25,22 +25,24 @@ html{
   margin: 0 auto;
 }
 
-code{
+textarea, code {
   display: block;
   padding: 16px;
-  overflow: auto;
   font-size: 85%;
   line-height: 1.45;
   border-radius: 6px;
   background-color: #161b22;
   color: #fff;
   width: 100%;
+  min-width: 100%;
+  max-width: 100%;
   white-space: pre-wrap;
   white-space: -moz-pre-wrap;
   white-space: -o-pre-wrap;
   word-wrap: break-word;
   box-sizing: border-box;
   min-height: 518px;
+  overflow: hidden;
 }
 
 .button {
